--- a/app/src/main/res/layout/tj_detail.xml
+++ b/app/src/main/res/layout/tj_detail.xml
@@ -29,24 +29,24 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/num_jo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textColor="@color/white"
+                android:text="N° JO"
+                app:layout_constraintTop_toBottomOf="@id/tv_detail"/>
+
+            <TextView
                 android:id="@+id/num_tj"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:textColor="@color/white"
-                android:text="TextView"
-                app:layout_constraintTop_toBottomOf="@id/tv_detail"/>
+                android:text="N° TJ" />
 
             <TextView
-                android:id="@+id/tjtext"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:textColor="@color/white"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/num_jo"
+                android:id="@+id/textTJ"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
