--- a/app/src/main/res/layout/tj_detail.xml
+++ b/app/src/main/res/layout/tj_detail.xml
@@ -38,29 +38,50 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_detail"/>
 
             <TextView
+                android:id="@+id/idTJ"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textColor="@color/white"
+                android:text="ID du TJ"
+                app:layout_constraintTop_toBottomOf="@id/num_jo"/>
+
+            <TextView
                 android:id="@+id/num_tj"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:textColor="@color/white"
-                android:text="N° TJ" />
+                android:text="N° TJ"
+                app:layout_constraintTop_toBottomOf="@id/idTJ"/>
 
             <TextView
-                android:id="@+id/textTJ"
+                android:id="@+id/organe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 android:textColor="@color/white"
-                android:text="TextView" />
+                android:text="Organe émetteur"
+                app:layout_constraintTop_toBottomOf="@id/num_tj"/>
 
 
             <TextView
-                android:id="@+id/arabic_text"
+                android:id="@+id/texteTJ"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:padding="20dp"
-                android:text="TextView" />
+                android:text="Enoncé TJ FR"
+                app:layout_constraintTop_toBottomOf="@id/organe"/>
+
+            <TextView
+                android:id="@+id/translation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:padding="20dp"
+                android:text="Enoncé TJ AR"
+                app:layout_constraintTop_toBottomOf="@id/texteTJ"/>
 
         </LinearLayout>
 
